# kdb-plus-fixed

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-release.yml  bump.yml  crate-pub.yml  fmt.yml  pypi-pub.yml  rust.yml
api_examples/: Cargo.toml
api_examples/src/: lib.rs
ipc_examples/: Cargo.toml
ipc_examples/examples/: acceptor.rs  acceptor_tls.rs  client.rs  complex_communication.rs  console.rs  constructor.rs  modify_object.rs  server.rs
kdbplus/: Cargo.toml
kdbplus/src/api/: mod.rs
kdbplus/src/ipc/: connection.rs  mod.rs
kdbplus/tests/: test.rs
